Use memoir hooks to render the titling page.
Instead of recommending a editable version, I think defining titlepage
hooks is better to achieve more consistency. For now, students can
renewcommand \thedocument, \thedepartment, and \thedegree for their
program. An Icelandic translation is pending, since we depend on
babel to chose it.

--- a/ruthesis2.cls
+++ b/ruthesis2.cls
@@ -22,3 +22,33 @@
 
 % To typeset the logo:
 \RequirePackage{rulogo}
+
+% This is to configure the title page by hooking into the maketitle
+% command
+\newcommand{\thedocument}{Dissertation}
+\newcommand{\thedepartment}{Department of Embarrassment}
+\newcommand{\thedegree}{Doctor of Ignorance}
+
+\aliaspagestyle{title}{empty}
+%\renewcommand{\maketitlehooka}{}
+%\renewcommand{\pretitle}{}
+%\renewcommand{\posttitle}{}
+%\renewcommand{maketitlehookb}{}
+%\renewcommand{\preauthor}{}
+%\renewcommand{\postauthor}{}
+\renewcommand{\maketitlehookc}{%
+  \begin{center}
+    {\thedocument} submitted to the\\
+    {\thedepartment} at Reykjavík University\\
+    in partial fulfilment of the requirements for the degree of\\
+    \begingroup\thedegree\endgroup
+  \end{center}}
+%\renewcommand{\predate}{}
+%\renewcommand{\postdate}{}
+\renewcommand{\maketitlehookd}{%
+  \vfill
+  \begin{center}
+    \RULogo{0.2}\\[\baselineskip]
+    Reykjavik University\\
+    Menntavegur 1, 102 Reykjavík, Ísland
+  \end{center}}
