Add missing \mainmatter and \backmatter.

--- a/phd-thesis.tex
+++ b/phd-thesis.tex
@@ -92,6 +92,7 @@ Contributions of non-authors, funding agencies, and so forth should go here.
 You can use some modest space to thank your friends here.
 
 
+\mainmatter
 \chapter{Introduction}
 
 We show the frobnication equation in \eqref{eq:frobnication}.
@@ -99,5 +100,7 @@ We show the frobnication equation in \eqref{eq:frobnication}.
     \label{eq:frobnication}
     \int\vec{o}(x)dx
 \end{equation}
+
+\backmatter
 
 \end{document}
